# market-intelligence-hub

./: .env.example  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: ingestion_pipeline.py  watcher_pipeline.py  weekly_digest.py
api/: Dockerfile  pyproject.toml  requirements.txt
api/app/: auth.py  db.py  main.py  models.py  schemas.py  seed.py  storage_reader.py
api/app/routers/: auth.py  comparison_groups.py  digests.py  watchers.py
api/tests/: test_api.py  test_seed.py
dashboard/: Dockerfile  app.py  pyproject.toml  requirements.txt
deploy/: Caddyfile  docker-compose.prod.yml
docs/: DAT.md  DEPLOY.md  DEPLOY_SERVERLESS.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/comparisons/: page.tsx
frontend/src/app/comparisons/[id]/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/digests/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/products/[id]/: page.tsx
frontend/src/app/products/new/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: AlertHistoryList.tsx  Header.tsx  PriceChart.tsx  ProductCard.tsx  RunHistoryTable.tsx
frontend/src/components/landing/: CtaBand.tsx  FeatureGrid.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  ProductMockup.tsx
frontend/src/lib/: api.ts  auth.ts
infra/postgres/: init.sql
ingestion/: pyproject.toml
ingestion/src/ingestion/: alerts.py  bronze.py  cli.py  db.py  digest.py  gold.py  notifications.py  ratelimit.py  robots.py  scheduling.py  silver.py  storage.py
ingestion/src/ingestion/sources/: eurostat.py  price_scraper.py  product_detector.py
ingestion/tests/: test_alerts.py  test_digest.py  test_eurostat.py  test_gold.py  test_notifications.py  test_price_scraper.py  test_product_detector.py  test_scheduling.py  test_silver.py
