[project]
name = "market-intelligence-api"
version = "0.1.0"
description = "Metadata API for the Market Intelligence Hub"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "boto3>=1.34",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "bcrypt>=4.1",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.0",
    "ingestion",
]

[tool.uv.sources]
ingestion = { path = "../ingestion", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.uv]
package = false
