[project]
name = "market-intelligence-dashboard"
version = "0.1.0"
description = "Streamlit dashboard for the Market Intelligence Hub"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "boto3>=1.34",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "requests>=2.31",
]

[tool.uv]
package = false
